Add progress bar and start button and animate on page load

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -18,3 +18,5 @@ i.flag:not(.icon)::before {
 @import 'scss/collections/all';
 @import 'scss/views/all';
 @import 'scss/modules/all';
+
+@import 'frontpage';
